[package]
name = "s3_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
aws-config = { version= "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.4.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
aws-smithy-types-convert = { version = "0.60.0", features = ["convert-chrono"] }
